--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
-            <h2 class="mb-4">Resume</h2>
+            <p><a href="https://drive.google.com/file/d/1f_iiNzocFecmJYVASvppdq0CNvvXM_8K/view?usp=sharing" class="mb-4">Resume</a></p>
             <p>A forward-thinking Mechanical Engineering student at MIT Academy of Engineering skilled in C, C++, and data structures, complemented by Python expertise and image identification using CNNs. Currently delving into the application of the JAYA algorithm for innovative engineering solutions, driven by a passion for leveraging emerging technologies.</p>
           </div>
         </div>
